--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,10 +43,10 @@ jobs:
           host: ${{ secrets.HOST }}
         run: |
         echo "Started testing the docker app"
-        docker pull sainadh086/mytaskapp:latest
-        docker run -p 8080:8080 -e MYAPP_DB_HOST=$host -e MYAPP_BD_PORT=27017 -e MYAPP_DB_USER="" -e MYAPP_DB_PASSWORD="" sainadh086/mytaskapp:latest
-        echo "Just ran the docker app"
-        export status = $(curl -i http://localhost:8080/ | awk 'NR == 1' | awk '{print $2}')
-        if [ $status == 200 ]; then echo "Success"; else echo "failed"; fi
-        echo "Completed testing"
+     #  docker pull docker.io/sainadh086/mytaskapp:latest
+    #     docker run -p 8080:8080 -e MYAPP_DB_HOST=$host -e MYAPP_BD_PORT=27017 -e MYAPP_DB_USER="" -e MYAPP_DB_PASSWORD="" sainadh086/mytaskapp:latest
+    #    echo "Just ran the docker app"
+    #    export status = $(curl -i http://localhost:8080/ | awk 'NR == 1' | awk '{print $2}')
+     #   if [ $status == 200 ]; then echo "Success"; else echo "failed"; fi
+     #   echo "Completed testing"
 
