--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,26 +27,19 @@ jobs:
         env:
           user_name: ${{ secrets.DOCKER_USER_NAME }}
           user_password: ${{ secrets.DOCKER_USER_PASSWORD }}
+          host: ${{ secrets.HOST }}
         run: |
-          export ver=$(git rev-list --all --count) 
+          export ver=${{ github.run_number }}
+          echo $ver
           docker login -u $user_name -p $user_password
           docker tag devapp:v1 sainadh086/mytaskapp:v$ver
           docker push sainadh086/mytaskapp:v$ver
           echo "Success"
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Running tests
-        shell: bash
-        env:
-          host: ${{ secrets.HOST }}
-        run: |
+          echo "Testing"
           echo "Started testing the docker app"
-          docker pull docker.io/sainadh086/mytaskapp:latest
+          docker pull docker.io/sainadh086/mytaskapp:v$ver
           docker run -p 8080:8080 -e MYAPP_DB_HOST=$host -e MYAPP_BD_PORT=27017 -e MYAPP_DB_USER="" -e MYAPP_DB_PASSWORD="" sainadh086/mytaskapp:latest
           echo "Just ran the docker app"
           export status = $(curl -i http://localhost:8080/ | awk 'NR == 1' | awk '{print $2}')
           if [ $status == 200 ]; then echo "Success"; else echo "failed"; fi
           echo "Completed testing"
-
