--- a/KubeDeploy/service.yml
+++ b/KubeDeploy/service.yml
@@ -1,16 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: taskapp-service
   labels:
     app: taskapp
+    app.kubernetes.io/instance: webapp
     env: dev
+  name: taskapp-service
   namespace: taskapp
 spec:
   ports:
-  - port: 8080
-    protocol: TCP
-    targetPort: 8081
+    - port: 8080
+      protocol: TCP
+      targetPort: 8081
   selector:
     app: myapp
   type: NodePort
