--- a/KubeDeploy/storage.yml
+++ b/KubeDeploy/storage.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: mongodb-pv
+  namespace: taskapp
 spec:
   storageClassName: ""
   capacity:
@@ -16,6 +17,7 @@ apiVersion : v1
 kind: PersistentVolumeClaim
 metadata:
   name: mongodb-data
+  namespace: taskapp
 spec:
   storageClassName: ""
   accessModes:
