--- a/KubeDeploy/storage.yml
+++ b/KubeDeploy/storage.yml
@@ -1,16 +1,18 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
+  labels:
+    app.kubernetes.io/instance: webapp
   name: mongodb-pv
   namespace: taskapp
 spec:
-  storageClassName: ""
+  accessModes:
+    - ReadWriteOnce
   capacity:
     storage: 5Gi
-  accessModes:
-  - ReadWriteOnce
   hostPath:
     path: /mydata
+  storageClassName: ''
 
 ---
 apiVersion : v1
