making changes to work in strict env

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,13 +33,12 @@ jobs:
           echo $ver
           docker login -u $user_name -p $user_password
           docker tag devapp:v1 sainadh086/mytaskapp:v$ver
-          docker push sainadh086/mytaskapp:v$ver
           echo "Success"
           echo "Testing"
           echo "Started testing the docker app"
-          docker pull docker.io/sainadh086/mytaskapp:v$ver
           docker run -p 8080:8080 -e MYAPP_DB_HOST=$host -e MYAPP_BD_PORT=27017 -e MYAPP_DB_USER="" -e MYAPP_DB_PASSWORD="" sainadh086/mytaskapp:v$ver
           echo "Just ran the docker app"
           export status = $(curl -i http://localhost:8080/ | awk 'NR == 1' | awk '{print $2}')
           if [ $status == 200 ]; then echo "Success"; else echo "failed"; fi
           echo "Completed testing"
+          if [$status == 200 ]; then docker push sainadh086/mytaskapp:v$ver; else echo "Docker push cancelled"; fi
