--- a/KubeDeploy/storage.yml
+++ b/KubeDeploy/storage.yml
@@ -7,7 +7,7 @@ metadata:
   namespace: taskapp
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   capacity:
     storage: 5Gi
   hostPath:
@@ -23,7 +23,7 @@ metadata:
 spec:
   storageClassName: ""
   accessModes:
-  - ReadWriteOnce
+  - ReadWriteMany
   resources:
     requests:
       storage: 5Gi
