--- a/KubeDeploy/taskapp_deploy.yml
+++ b/KubeDeploy/taskapp_deploy.yml
@@ -17,22 +17,25 @@ spec:
         app: myapp
     spec:
       containers:
-        - env:
-            - name: MYAPP_DB_HOST
-              value: MONGODB_SERVICE_HOST
-            - name: MYAPP_DB_PORT
-              value: '27017'
-            - name: MYAPP_DB_USER
-              valueFrom:
-                secretKeyRef:
-                  key: db_user
-                  name: taskapp-secrets
-            - name: MYAPP_DB_PASS
-              valueFrom:
-                secretKeyRef:
-                  key: db_password
-                  name: taskapp-secrets
-          image: 'mytaskapp:v1'
-          name: myapp
-          ports:
-            - containerPort: 8080
+      - name: myapp
+        env:
+        - name: MYAPP_DB_HOST
+          value: "192.168.1.8"
+        - name: MYAPP_DB_PORT
+          value: '27017'
+        - name: MYAPP_DB_USER
+          #valueFrom:
+          # secretKeyRef:
+          #   key: db_user
+          #   name: taskapp-secrets
+          value: ""
+        - name: MYAPP_DB_PASS
+          #valueFrom:
+          # secretKeyRef:
+          #   key: db_password
+          #   name: taskapp-secrets
+          value: ""
+        image: 'docker.io/sainadh086/mytaskapp:v7'
+        name: myapp
+        ports:
+          - containerPort: 8080
