--- a/KubeDeploy/storage.yml
+++ b/KubeDeploy/storage.yml
@@ -1,29 +1,14 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
+  name: mongodb-data
   labels:
-    app.kubernetes.io/instance: webapp
-  name: mongodb-pv
-  namespace: taskapp
+    type: mongo
 spec:
-  accessModes:
-    - ReadWriteMany
+  storageClassName: "standard"
   capacity:
     storage: 5Gi
-  hostPath:
-    path: /mydata
-  storageClassName: ''
-
----
-apiVersion : v1
-kind: PersistentVolumeClaim
-metadata:
-  name: mongodb-data
-  namespace: taskapp
-spec:
-  storageClassName: ""
   accessModes:
-  - ReadWriteMany
-  resources:
-    requests:
-      storage: 5Gi
+    - ReadWriteOnce
+  hostPath:
+    path: "/home/varshan/Daily/d1"
