--- a/KubeDeploy/taskapp_deploy.yml
+++ b/KubeDeploy/taskapp_deploy.yml
@@ -20,22 +20,24 @@ spec:
       - name: myapp
         env:
         - name: MYAPP_DB_HOST
-          value: "192.168.1.8"
+          value: mongo_SERVICE_HOST
         - name: MYAPP_DB_PORT
           value: '27017'
         - name: MYAPP_DB_USER
-          #valueFrom:
-          # secretKeyRef:
-          #   key: db_user
-          #   name: taskapp-secrets
-          value: ""
+          valueFrom:
+            secretKeyRef:
+              key: db_user
+              name: taskapp-secrets
         - name: MYAPP_DB_PASS
-          #valueFrom:
-          # secretKeyRef:
-          #   key: db_password
-          #   name: taskapp-secrets
-          value: ""
+          valueFrom:
+            secretKeyRef:
+              key: db_password
+              name: taskapp-secrets
         image: 'docker.io/sainadh086/mytaskapp:v7'
-        name: myapp
+        livenessProbe:
+          exec:
+            command: ["/bin/sh", "-c", "sleep 15", "&&", "curl", "http://localhost:8080/", "||", "exit", "1"]
+          initialDelaySeconds: 10
+          periodSeconds: 5
         ports:
           - containerPort: 8080
