--- a/KubeDeploy/taskapp_deploy.yml
+++ b/KubeDeploy/taskapp_deploy.yml
@@ -36,7 +36,7 @@ spec:
         image: 'docker.io/sainadh086/mytaskapp:v7'
         livenessProbe:
           exec:
-            command: ["/bin/sh", "-c", "sleep 15", "&&", "curl", "http://localhost:8080/", "||", "exit", "1"]
+            command: ["/bin/sh", "-c", "sleep 15"]
           initialDelaySeconds: 10
           periodSeconds: 5
         ports:
